fix modal z-index

--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -14,7 +14,7 @@
       background: $overlay;
       top: 0;
       left: 0;
-      z-index: 2;
+      z-index: 4;
     }
 
     .modal {
